packages/rocket/rocket-0.5.0-rc.2/core/codegen/tests/ui-fail-nightly/bad-ignored-segments.stderr
error: parameter must be named
 --> tests/ui-fail-nightly/bad-ignored-segments.rs:6:12
  |
6 | #[get("/c?<_>")]
  |            ^
  |
  = help: use a name such as `_guard` or `_param`

error: parameter must be named
 --> tests/ui-fail-nightly/bad-ignored-segments.rs:9:22
  |
9 | #[post("/d", data = "<_>")]
  |                      ^^^
  |
  = help: use a name such as `_guard` or `_param`
