packages/rocket/rocket-0.5.0-rc.2/core/codegen/tests/ui-fail-nightly/bad-ignored-segments.rs
#[macro_use] extern crate rocket;

#[get("/<_>")]
fn i0() {}

#[get("/c?<_>")]
fn i1() {}

#[post("/d", data = "<_>")]
fn i2() {}

fn main() {  }
